<resources>
    <string name="app_name">Batman</string>
    <string name="name">Hi, Milad</string>
    <string name="welcomeMessage">Lets relax and watch a movie!</string>
    <string name="searchMovies">Search Movies</string>
    <string name="category">Category</string>
    <string name="movie">Movie</string>
    <string name="tvShow">Tv Show</string>
    <string name="action">Action</string>
    <string name="comedy">Comedy</string>
    <string name="batmanMovies">Batman Movies</string>
    <string name="watchNow">Watch Now</string>
</resources>